# cyberpot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: cyberpot.example.yaml
docker/: README.md
scripts/: download_blocklists.sh  download_geoip.sh  setup.sh
src/cyberpot/: __main__.py  config.py
src/cyberpot/analysis/: geoip.py  threat_intel.py
src/cyberpot/core/: alert_manager.py  enrichment.py  event_processor.py  log_parser.py  log_watcher.py  models.py
src/cyberpot/irc/: bot.py  formatter.py  rate_limiter.py  severity_filter.py
src/cyberpot/storage/: memory_store.py  statistics.py
src/cyberpot/tui/: app.py  styles.css
src/cyberpot/tui/screens/: alerts.py  dashboard.py  search.py  session_detail.py
src/cyberpot/tui/widgets/: alert_panel.py  event_feed.py  statistics.py  tty_player.py  world_map.py
tests/: conftest.py  test_alert_manager.py  test_config.py  test_event_processor.py  test_irc.py  test_log_parser.py  test_memory_store.py  test_tui_widgets.py
